# hackathon-2-phase-1

./: .gitignore  ADVANCED-FEATURES-COMPLETE.md  AGENTS.md  CLAUDE.md  CODE_REVIEW.md  COMPREHENSIVE_TEST.sh  CONSTITUTION-PHASE3.md  CONSTITUTION_STATUS.md  DEMO-VIDEO-SCRIPT.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_READY.md  DEPLOY_NOW.md  GITHUB_SETUP.md  HACKATHON_CONSTITUTION.md  HISTORY.md  IMPLEMENTATION-STATUS.md  PHASE3-COMPLETE.md  PHASE3-IMPLEMENTATION-STATUS.md  PHASE3-SETUP-GUIDE.md  QUICK-DEPLOY-CHECKLIST.md  QUICKSTART.md  QUICK_DEPLOY.md  README.md  READY-TO-DEPLOY.md  RESPONSIVE-DESIGN-COMPLETE.md  REUSABLE-INTELLIGENCE.md  SETUP.md  TEST_REPORT.md  UI-IMPLEMENTATION-COMPLETE.md  USAGE.md  UV_QUICK_REFERENCE.md  UV_SETUP.md  deploy.sh  docker-compose.yml  document-phase-3.md  easy_push.sh  phase-3.md  push_to_github.bat  push_to_github.sh  (+4 more)
.claude/: README.md
.claude/agents/: backend-developer.md  code-reviewer.md  frontend-developer.md  python-developer.md  spec-writer.md
.claude/commands/: README.md  sp.implement.md  sp.plan.md  sp.review.md  sp.specify.md  sp.task.md
.claude/skills/: better-auth-integration.md  code-review.md  console-ui-design.md  data-modeling.md  fastapi-development.md  (+5 more)
.spec-kit/: config.yaml  constitution.md
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  add_tags_column.py  config.py  database.py  main.py  migrate_add_tool_calls.py  models.py  requirements.txt
frontend/: .dockerignore  .env.local.example  CLAUDE.md  Dockerfile  next.config.ts  package.json
specs/: IMPLEMENTATION-PLAN.md  SPEC_TEMPLATE.md  add-todo.md  architecture.md  delete-todo.md  mark-complete.md  overview.md  update-todo.md  view-todos.md
src/: __init__.py  main.py  models.py
(+68 files in other folders)
